--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "chroma-js": "2.1.0",
     "codemirror": "5.49.2",
-    "preact": "10.1.1"
+    "postcss-modules": "1.5.0",
+    "preact": "10.1.1",
+    "tailwindcss": "1.1.4"
   },
   "devDependencies": {
     "parcel-bundler": "1.12.4"
