--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve index.html",
-    "build": "parcel build index.html"
+    "build": "NODE_ENV=production parcel build index.html"
   },
   "dependencies": {
     "chroma-js": "2.1.0",
@@ -15,6 +15,7 @@
     "tailwindcss": "1.1.4"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "1.3.0",
     "parcel-bundler": "1.12.4"
   }
 }
