--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve index.html",
-    "build": "NODE_ENV=production parcel build index.html"
+    "build": "NODE_ENV=production parcel build index.html",
+    "format": "prettier --write js/**/*.js"
   },
   "dependencies": {
     "chroma-js": "2.1.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.3.0",
-    "parcel-bundler": "1.12.4"
+    "parcel-bundler": "1.12.4",
+    "prettier": "1.19.1"
   }
 }
