--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
-    "build": "cross-env NODE_ENV=production parcel build -d build --public-url . src/ui/index.html",
+    "build": "cross-env NODE_ENV=production parcel build -d build -t electron --public-url . src/ui/index.html",
     "dist": "rimraf dist && yarn run build && electron-builder build",
     "format": "prettier --write js/**/*.js"
   },
