--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chroma-js": "2.1.0",
     "codemirror": "5.49.2",
     "lodash": "4.17.15",
+    "minimist": "1.2.0",
     "ml5": "0.4.3",
     "postcss-modules": "1.5.0",
     "preact": "10.3.1",
