--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ml5": "0.4.3",
     "postcss-modules": "1.5.0",
     "preact": "10.3.1",
-    "tailwindcss": "1.1.4"
+    "tailwindcss": "1.1.4",
+    "tween-functions": "1.2.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.3.0",
