--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "figment",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "main.js",
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
     "build": "cross-env NODE_ENV=production parcel build -d build -t electron --public-url . src/ui/index.html",
-    "dist": "rimraf dist && yarn run build && electron-builder build",
+    "dist": "rimraf dist && yarn run build && electron-builder build --mac --win",
     "format": "prettier --write js/**/*.js"
   },
   "dependencies": {
