--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "parcel-bundler": "1.12.4",
     "prettier": "1.19.1",
     "rimraf": "^3.0.0"
+  },
+  "build": {
+    "appId": "be.emrg.figment",
+    "productName": "Figment",
+    "directories": {
+      "buildResources": "res"
+    }
   }
 }
