--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ml5": "0.4.3",
     "postcss-modules": "1.5.0",
     "preact": "10.3.1",
+    "seedrandom": "3.0.5",
     "tailwindcss": "1.1.4",
     "tween-functions": "1.2.0"
   },
