--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.3.0",
     "cross-env": "^6.0.3",
+    "dotenv": "8.2.0",
     "electron": "^7.1.9",
     "electron-builder": "^21.2.0",
+    "electron-notarize": "0.2.1",
     "parcel-bundler": "1.12.4",
     "prettier": "1.19.1",
     "rimraf": "^3.0.0"
@@ -34,13 +36,20 @@
   "build": {
     "appId": "be.emrg.figment",
     "productName": "Figment",
+    "afterSign": "scripts/notarize.js",
     "directories": {
       "buildResources": "res"
     },
     "mac": {
+      "hardenedRuntime": true,
+      "entitlements": "res/entitlements.mac.plist",
+      "entitlementsInherit": "res/entitlements.mac.plist",
       "extendInfo": {
         "NSCameraUsageDescription": "This app can use the webcam to classify realtime images or detect poses. Images are never uploaded or stored online."
       }
+    },
+    "dmg": {
+      "sign": false
     }
   }
 }
