--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
   "name": "figment",
   "version": "0.2.0",
-  "main": "main.js",
+  "main": "src/electron/main.js",
   "license": "MIT",
   "scripts": {
+    "dev": "vite",
     "start": "cross-env NODE_ENV=development electron .",
     "build": "cross-env NODE_ENV=production parcel build -d build -t electron --public-url . src/ui/index.html",
     "dist": "rimraf dist && npm run build && electron-builder build",
     "format": "prettier --write js/**/*.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.12.1",
-    "chroma-js": "2.1.0",
-    "codemirror": "5.49.2",
-    "lodash": "4.17.15",
-    "minimist": "1.2.0",
-    "ml5": "0.4.3",
-    "postcss-modules": "1.5.0",
-    "preact": "10.3.1",
+    "chroma-js": "2.1.2",
+    "codemirror": "5.62.3",
+    "lodash": "4.17.21",
+    "minimist": "1.2.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "seedrandom": "3.0.5",
-    "tailwindcss": "1.1.4",
-    "three": "^0.132.2",
+    "tailwindcss": "2.2.15",
+    "three": "0.132.2",
     "tween-functions": "1.2.0"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "1.3.0",
-    "cross-env": "^6.0.3",
-    "dotenv": "8.2.0",
-    "electron": "^7.1.9",
-    "electron-builder": "^21.2.0",
-    "electron-notarize": "0.2.1",
-    "parcel-bundler": "1.12.4",
-    "prettier": "1.19.1",
-    "rimraf": "^3.0.0"
+    "@vitejs/plugin-react-refresh": "1.3.6",
+    "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
+    "electron": "14.0.1",
+    "electron-builder": "22.11.7",
+    "electron-notarize": "1.1.1",
+    "prettier": "2.4.0",
+    "rimraf": "3.0.2",
+    "vite": "2.5.7"
   },
   "build": {
     "appId": "be.emrg.figment",
     "productName": "Figment",
     "afterSign": "scripts/notarize.js",
+    "files": [
+      "dist/**/*",
+      "src/electron/**/*"
+    ],
     "directories": {
       "buildResources": "res"
     },
