--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "seedrandom": "3.0.5",
     "tailwindcss": "2.2.15",
     "three": "0.132.2",
-    "tween-functions": "1.2.0"
+    "tween-functions": "1.2.0",
+    "twgl.js": "^4.19.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "1.3.6",
