--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "codemirror": "5.62.3",
     "lodash": "4.17.21",
     "minimist": "1.2.5",
+    "node-glob": "^1.2.0",
     "react": "17.0.2",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
