--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "figment",
-  "version": "0.2.0",
+  "version": "0.3.0",
+  "description": "Visual coding environment for creative AI",
+  "author": "EMRG",
   "main": "src/electron/main.js",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
     "start": "cross-env NODE_ENV=development electron .",
-    "build": "cross-env NODE_ENV=production parcel build -d build -t electron --public-url . src/ui/index.html",
+    "build": "cross-env NODE_ENV=production vite build",
     "dist": "rimraf dist && npm run build && electron-builder build",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
     "@mediapipe/pose": "^0.4.1630009814",
     "chroma-js": "2.1.2",
-    "codemirror": "5.62.3",
+    "codemirror": "5.63.1",
     "lodash": "4.17.21",
     "minimist": "1.2.5",
     "node-glob": "^1.2.0",
@@ -21,8 +23,8 @@
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
     "seedrandom": "3.0.5",
-    "tailwindcss": "2.2.15",
-    "three": "0.132.2",
+    "tailwindcss": "2.2.16",
+    "three": "0.133.0",
     "tween-functions": "1.2.0",
     "twgl.js": "^4.19.2"
   },
@@ -30,12 +32,12 @@
     "@vitejs/plugin-react-refresh": "1.3.6",
     "cross-env": "7.0.3",
     "dotenv": "10.0.0",
-    "electron": "14.0.1",
+    "electron": "15.1.0",
     "electron-builder": "22.11.7",
     "electron-notarize": "1.1.1",
-    "prettier": "2.4.0",
+    "prettier": "2.4.1",
     "rimraf": "3.0.2",
-    "vite": "2.5.7"
+    "vite": "2.6.2"
   },
   "build": {
     "appId": "be.emrg.figment",
