--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Get an Apple App Password at https://appleid.apple.com
 # The Apple ID is your email address.
+# The ASC Provider is your Team Short Name: https://www.npmjs.com/package/electron-notarize#notes-on-your-team-short-name
 APPLE_ID=
 APPLE_APP_PASSWORD=
+APPLE_ASC_PROVIDER=
