--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "vite",
     "start": "cross-env NODE_ENV=development electron .",
     "build": "cross-env NODE_ENV=production vite build",
-    "dist": "rimraf dist && npm run build && electron-builder build",
+    "dist": "rimraf dist && yarn build && electron-builder build",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
@@ -44,7 +44,7 @@
     "productName": "Figment",
     "afterSign": "scripts/notarize.js",
     "files": [
-      "dist/**/*",
+      "build/**/*",
       "src/electron/**/*"
     ],
     "directories": {
