--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "vite",
     "start": "cross-env NODE_ENV=development electron .",
     "build": "cross-env NODE_ENV=production vite build",
-    "dist": "rimraf dist && yarn build && electron-builder build",
+    "dist": "rimraf dist && yarn build && electron-builder --mac --universal && electron-builder --win --x64",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
