--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "4.17.21",
     "minimist": "1.2.5",
     "node-glob": "^1.2.0",
+    "pngjs": "6.0.0",
     "react": "17.0.2",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
