--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
     "seedrandom": "3.0.5",
-    "tailwindcss": "2.2.16",
     "three": "0.133.0",
     "tween-functions": "1.2.0",
     "twgl.js": "^4.19.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "1.3.6",
+    "autoprefixer": "10.4.0",
     "cross-env": "7.0.3",
     "dotenv": "10.0.0",
-    "electron": "15.1.0",
-    "electron-builder": "22.11.7",
+    "electron": "16.0.4",
+    "electron-builder": "22",
     "electron-notarize": "1.1.1",
+    "postcss": "8.4.5",
     "prettier": "2.4.1",
     "rimraf": "3.0.2",
+    "tailwindcss": "3.0.1",
     "vite": "2.6.2"
   },
   "build": {
