--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "twgl.js": "^4.19.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "autoprefixer": "10.4.0",
+    "babel-jest": "27.5.0",
     "cross-env": "7.0.3",
     "dotenv": "10.0.0",
     "electron": "16.0.4",
@@ -39,6 +42,7 @@
     "jest": "27.4.7",
     "postcss": "8.4.5",
     "prettier": "2.4.1",
+    "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "tailwindcss": "3.0.1",
     "vite": "2.6.2"
