--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "chroma-js": "2.1.2",
     "codemirror": "5.63.1",
+    "glob": "^7.2.0",
     "lodash": "4.17.21",
     "minimist": "1.2.5",
-    "node-glob": "^1.2.0",
     "react": "17.0.2",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
