--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "vite",
     "start": "cross-env NODE_ENV=development electron .",
     "build": "cross-env NODE_ENV=production vite build",
+    "build-library": "cross-env NODE_ENV=production rollup -c",
     "dist": "rimraf build && rimraf dist && yarn build && electron-builder --mac --universal && electron-builder --win --x64",
     "fastdist": "rimraf build && rimraf dist && yarn build && cross-env DIST_ENV=development electron-builder --dir",
     "format": "prettier --write src/**/*.{js,jsx}"
@@ -28,6 +29,8 @@
     "twgl.js": "^4.19.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "22.0.0",
+    "@rollup/plugin-node-resolve": "13.3.0",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "autoprefixer": "10.4.0",
     "cross-env": "7.0.3",
