--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "electron": "16.0.4",
     "electron-builder": "23.0.3",
     "electron-notarize": "1.1.1",
+    "esbuild": "^0.14.42",
     "postcss": "8.4.5",
     "prettier": "2.4.1",
     "rimraf": "3.0.2",
