--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "glob": "^7.2.0",
     "lodash": "4.17.21",
     "minimist": "1.2.5",
+    "node-osc": "8.0.3",
     "react": "17.0.2",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
