--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "cross-env NODE_ENV=development electron .",
     "build": "cross-env NODE_ENV=production vite build",
     "build-library": "cross-env NODE_ENV=production rollup -c",
-    "dist": "rimraf build && rimraf dist && npm build && electron-builder --mac --universal && electron-builder --win --x64",
-    "fastdist": "rimraf build && rimraf dist && npm build && cross-env DIST_ENV=development electron-builder --dir",
+    "dist": "rimraf build && rimraf dist && npm run build && electron-builder --mac --universal && electron-builder --win --x64",
+    "fastdist": "rimraf build && rimraf dist && npm run build && cross-env DIST_ENV=development electron-builder --dir",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
