--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "twgl.js": "5.5.3"
   },
   "devDependencies": {
+    "@electron/notarize": "^2.3.0",
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
@@ -40,7 +41,6 @@
     "dotenv": "16.4.5",
     "electron": "29.0.1",
     "electron-builder": "24.12.0",
-    "electron-notarize": "1.2.2",
     "esbuild": "0.20.1",
     "postcss": "8.4.35",
     "prettier": "3.2.5",
@@ -49,9 +49,8 @@
     "vite": "5.1.4"
   },
   "build": {
-    "appId": "be.emrg.figment",
+    "appId": "be.debleser.figment",
     "productName": "Figment",
-    "afterSign": "scripts/notarize.cjs",
     "files": [
       "build/**/*",
       "examples/**/*",
@@ -66,6 +65,9 @@
       "entitlementsInherit": "res/entitlements.mac.plist",
       "extendInfo": {
         "NSCameraUsageDescription": "This app can use the webcam to classify realtime images or detect poses. Images are never uploaded or stored online."
+      },
+      "notarize": {
+        "teamId": "5X78EYG9RH"
       }
     },
     "dmg": {
