--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "figment",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "type": "module",
   "description": "Visual coding environment for creative AI",
   "author": "EMRG",
@@ -53,11 +53,7 @@
   "build": {
     "appId": "be.debleser.figment",
     "productName": "Figment",
-    "files": [
-      "build/**/*",
-      "examples/**/*",
-      "src/electron/**/*"
-    ],
+    "files": ["build/**/*", "examples/**/*", "src/electron/**/*"],
     "directories": {
       "buildResources": "res"
     },
