--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "cross-env NODE_ENV=production vite build",
     "build-library": "cross-env NODE_ENV=production rollup -c",
     "dist": "rimraf build && rimraf dist && npm run build && electron-builder --mac --universal && electron-builder --win --x64",
-    "fastdist": "rimraf build && rimraf dist && npm run build && cross-env DIST_ENV=development electron-builder --dir",
+    "fastdist": "rimraf build && rimraf dist && npm run build && cross-env DIST_ENV=development electron-builder --dir -c.mac.identity=null",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
