--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chroma-js": "2.4.2",
     "clsx": "^2.1.0",
     "codemirror": "5.63.1",
+    "fuse.js": "^6.4.6",
     "glob": "10.3.10",
     "jexl": "^2.3.0",
     "lodash": "4.17.21",
