--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "4.17.21",
     "minimist": "1.2.8",
     "node-osc": "9.1.0",
+    "onnxruntime-web": "^1.19.0",
     "react": "18.2.0",
     "react-color": "2.19.3",
     "react-dom": "18.2.0",
@@ -54,7 +55,11 @@
   "build": {
     "appId": "be.debleser.figment",
     "productName": "Figment",
-    "files": ["build/**/*", "examples/**/*", "src/electron/**/*"],
+    "files": [
+      "build/**/*",
+      "examples/**/*",
+      "src/electron/**/*"
+    ],
     "directories": {
       "buildResources": "res"
     },
