--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "cross-env NODE_ENV=development electron --trace-warnings .",
     "build": "cross-env NODE_ENV=production vite build",
     "build-library": "cross-env NODE_ENV=production rollup -c",
-    "dist": "rimraf build && rimraf dist && npm run build && electron-builder --mac --universal && electron-builder --win --x64",
+    "dist": "rimraf build && rimraf dist && npm run build && electron-builder build --mac --universal && electron-builder build --win --x64",
     "fastdist": "rimraf build && rimraf dist && npm run build && cross-env DIST_ENV=development electron-builder --dir -c.mac.identity=null",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
@@ -36,7 +36,7 @@
     "twgl.js": "5.5.3"
   },
   "devDependencies": {
-    "@electron/notarize": "^2.3.0",
+    "@electron/notarize": "^2.4.0",
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
