--- a/package.json
+++ b/package.json
@@ -16,41 +16,41 @@
     "format": "prettier --write src/**/*.{js,jsx}"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "chroma-js": "2.4.2",
     "clsx": "^2.1.0",
     "codemirror": "5.63.1",
-    "fuse.js": "^6.4.6",
+    "fuse.js": "^7.1.0",
     "glob": "10.3.10",
     "jexl": "^2.3.0",
     "lodash": "4.17.21",
     "minimist": "1.2.8",
     "node-osc": "9.1.0",
-    "onnxruntime-web": "^1.19.0",
-    "react": "18.2.0",
+    "onnxruntime-web": "^1.20.1",
+    "react": "19.0.0",
     "react-color": "2.19.3",
-    "react-dom": "18.2.0",
+    "react-dom": "19.0.0",
     "seedrandom": "3.0.5",
-    "three": "0.161.0",
+    "three": "0.173.0",
     "tween-functions": "1.2.0",
-    "twgl.js": "5.5.3"
+    "twgl.js": "5.5.4"
   },
   "devDependencies": {
-    "@electron/notarize": "^2.4.0",
-    "@rollup/plugin-commonjs": "25.0.7",
-    "@rollup/plugin-node-resolve": "15.2.3",
+    "@electron/notarize": "^2.5.0",
+    "@rollup/plugin-commonjs": "28.0.2",
+    "@rollup/plugin-node-resolve": "16.0.0",
+    "@tailwindcss/vite": "^4.0.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
-    "autoprefixer": "10.4.17",
+    "autoprefixer": "^10.4.20",
     "cross-env": "7.0.3",
     "dotenv": "16.4.5",
-    "electron": "^32.0.1",
-    "electron-builder": "^24.13.3",
+    "electron": "^34.0.2",
+    "electron-builder": "^25.1.8",
     "esbuild": "0.20.1",
-    "postcss": "8.4.35",
     "prettier": "3.2.5",
     "rimraf": "5.0.5",
-    "tailwindcss": "3.4.1",
-    "vite": "5.1.4"
+    "tailwindcss": "^4.0.3",
+    "vite": "6.0.11"
   },
   "build": {
     "appId": "be.debleser.figment",
