--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "twgl.js": "5.5.4"
   },
   "devDependencies": {
-    "@electron/notarize": "^2.5.0",
-    "@rollup/plugin-commonjs": "28.0.2",
-    "@rollup/plugin-node-resolve": "16.0.0",
+    "@electron/notarize": "^3.0.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@tailwindcss/vite": "^4.0.3",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "autoprefixer": "^10.4.20",
     "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
+    "dotenv": "^16.5.0",
     "electron": "^34.0.2",
     "electron-builder": "^25.1.8",
     "esbuild": "0.20.1",
-    "prettier": "3.2.5",
+    "prettier": "^3.5.3",
     "rimraf": "5.0.5",
     "tailwindcss": "^4.0.3",
     "vite": "6.0.11"
