--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@tailwindcss/vite": "^4.0.3",
-    "@vitejs/plugin-react-refresh": "1.3.6",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.20",
     "cross-env": "7.0.3",
     "dotenv": "^16.5.0",
-    "electron": "^34.0.2",
-    "electron-builder": "^25.1.8",
-    "esbuild": "0.20.1",
+    "electron": "^36.4.0",
+    "electron-builder": "^26.0.12",
+    "esbuild": "^0.25.5",
     "prettier": "^3.5.3",
-    "rimraf": "5.0.5",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.0.3",
-    "vite": "6.0.11"
+    "vite": "^6.3.5"
   },
   "build": {
     "appId": "be.debleser.figment",
