--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
-    "chroma-js": "2.4.2",
+    "chroma-js": "^3.1.2",
     "clsx": "^2.1.0",
     "codemirror": "5.63.1",
     "fuse.js": "^7.1.0",
@@ -25,7 +25,7 @@
     "jexl": "^2.3.0",
     "lodash": "4.17.21",
     "minimist": "1.2.8",
-    "node-osc": "9.1.0",
+    "node-osc": "^9.1.5",
     "onnxruntime-web": "^1.20.1",
     "react": "19.0.0",
     "react-color": "2.19.3",
