Update glob dependency

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.0",
     "codemirror": "5.63.1",
     "fuse.js": "^7.1.0",
-    "glob": "10.3.10",
+    "glob": "^11.0.3",
     "jexl": "^2.3.0",
     "lodash": "4.17.21",
     "minimist": "1.2.8",
