--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "chroma-js": "^3.1.2",
     "clsx": "^2.1.0",
-    "codemirror": "5.63.1",
+    "codemirror": "^5.65.19",
     "fuse.js": "^7.1.0",
     "glob": "^11.0.3",
     "jexl": "^2.3.0",
