Upgrade react/react-dom

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "minimist": "1.2.8",
     "node-osc": "^9.1.5",
     "onnxruntime-web": "^1.20.1",
-    "react": "19.0.0",
+    "react": "^19.1.0",
     "react-color": "2.19.3",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.1.0",
     "seedrandom": "3.0.5",
     "three": "^0.177.0",
     "tween-functions": "1.2.0",
