CI: add specific dist-win and dist-mac build scripts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm run build
 
       - name: Build Electron app
-        run: npm run dist
+        run: npm run dist-${{ matrix.os == 'macos-latest' && 'mac' || 'win' }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
