--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "cross-env NODE_ENV=production vite build",
     "build-library": "cross-env NODE_ENV=production rollup -c",
     "dist": "rimraf build && rimraf dist && npm run build && electron-builder build --mac --universal && electron-builder build --win --x64",
+    "dist-mac": "rimraf build && rimraf dist && npm run build && electron-builder build --mac --universal",
+    "dist-win": "rimraf build && rimraf dist && npm run build && electron-builder build --win --x64",
     "fastdist": "rimraf build && rimraf dist && npm run build && cross-env DIST_ENV=development electron-builder --dir -c.mac.identity=null",
     "format": "prettier --write src/**/*.{js,jsx}"
   },
