--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,12 @@ jobs:
       - name: Build Electron app
         run: npm run dist-${{ matrix.os == 'macos-latest' && 'mac' || 'win' }}
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
           APPLE_ASC_PROVIDER: ${{ secrets.APPLE_ASC_PROVIDER }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload artifacts
         if: startsWith(github.ref, 'refs/tags/')
