--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,75 +1,55 @@
-name: Build and Release
+name: Build & Publish to S3
 
 on:
   push:
-    branches:
-      - main
-      - master
-    tags:
-      - 'v*'
+    branches: [master] # nightly builds
+    tags: ['v*'] # versioned “release” builds
 
 jobs:
-  release:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
-        with:
-          node-version: '22'
+        with: { node-version: '22' }
 
-      - name: Install dependencies
+      - name: Install node dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
-
-      - name: Build Electron app
-        run: npm run dist-${{ matrix.os == 'macos-latest' && 'mac' || 'win' }}
+      - name: Build & publish
+        id: publish
+        shell: bash # ensures `date` works on Windows runner
         env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+
           CSC_LINK: ${{ secrets.CSC_LINK }}
           CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload artifacts
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/Figment-${{ startsWith(github.ref, 'refs/tags/') && format('{0}.{1}', github.ref_name, matrix.os == 'macos-latest' && 'dmg' || 'exe') || format('{0}-latest.{1}', 'figment', matrix.os == 'macos-latest' && 'dmg' || 'exe') }}
-          asset_name: Figment-${{ startsWith(github.ref, 'refs/tags/') && github.ref_name || 'latest' }}.${{ matrix.os == 'macos-latest' && 'dmg' || 'exe' }}
-          asset_content_type: application/octet-stream
+        run: |
+          # Decide where this build should land
+          if [[ "${{ github.ref_type }}" == "tag" ]]; then
+              PUBLISH_PATH="releases"
+          else
+              # One folder per day to avoid stomping on earlier nightlies
+              PUBLISH_PATH="nightlies/$(date -u +'%Y-%m-%d')"
+          fi
 
-      - name: Upload build artifacts
-        if: github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v4
-        with:
-          name: figment-${{ matrix.os == 'macos-latest' && 'macos' || 'windows' }}
-          path: ./dist/*.${{ matrix.os == 'macos-latest' && 'dmg' || 'exe' }}
-          if-no-files-found: error
-
-  create-release:
-    needs: release
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
+          echo "Publishing to s3://figmentapp/$PUBLISH_PATH"
+          npx electron-builder \
+              --publish always \
+              -c.publish.provider=s3 \
+              -c.publish.bucket=figmentapp \
+              -c.publish.acl=public-read \
+              -c.publish.path=$PUBLISH_PATH
